# owkin-prep

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint-and-test.yml
app/: __init__.py  main.py
app/routes/: chat.py
app/schemas/: chat.py
app/services/: agent.py  data_loader.py  tools.py
app/static/css/: style.css
app/static/js/: chat.js
app/templates/: index.html
k8s/base/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
tests/: test_main.py
tests/routes/: test_chat.py
tests/schemas/: test_chat.py
tests/services/: test_agent.py  test_data_loader.py  test_tools.py
