[project]
name = "owkin-gene-cancer-agent"
version = "0.1.0"
description = "Agentic chat app for querying gene/cancer expression data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.52.0",
    "pandas>=2.2.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

